# microservice/app1.backend/src/openapi.yaml
@@ -74,6 +74,34 @@ paths:
       responses:
         '200':
           description: OK
+  /api/v1/workitems:
+    get:
+      tags:
+      - TaskDesk
+      parameters:
+      - name: customer
+        in: query
+        schema:
+          type: string
+      - name: status
+        in: query
+        schema:
+          type: string
+      responses:
+        '200':
+          description: OK
+    post:
+      tags:
+      - TaskDesk
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateWorkItem'
+        required: true
+      responses:
+        '200':
+          description: OK
   /api/v1/workitems/{key}:
     get:
       tags:
@@ -84,19 +112,6 @@ paths:
         required: true
         schema:
           type: string
-      responses:
-        '200':
-          description: OK
-  /api/v1/workitems:
-    post:
-      tags:
-      - TaskDesk
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/CreateWorkItem'
-        required: true
       responses:
         '200':
           description: OK
